# rootbeer

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.circleci/: config.yml
app/: build.gradle.kts
gradle/: libs.versions.toml
rootbeerlib/: build.gradle.kts
rootbeerlib/src/main/cpp/: CMakeLists.txt  toolChecker.cpp
